--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -1,4 +1,6 @@
 [".config/wallpapers"]
     type = "archive"
-    url = "https://github.com/wwxiaoqi/MyWallpapers.git"
-    refreshPeriod = "168h"
+    url = "https://github.com/wwxiaoqi/MyWallpapers/archive/refs/tags/v1.tar.gz"
+    exact = true
+    stripComponents = 1
+    refreshPeriod = "672h"
