--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -79,7 +79,8 @@ env = XDG_SESSION_DESKTOP, Hyprland
 # 設定全域縮放比例
 env = QT_AUTO_SCREEN_SCALE_FACTOR, 1
 env = QT_SCALE_FACTOR, 1.15
-env = GDK_DPI_SCALE, 1.15
+env = GDK_DPI_SCALE, 140
+# env = GDK_SCALE, 1.5
 
 # Nvidia Environment
 # See https://wiki.hyprland.org/Nvidia/
