fix chrome wayland Ime Error
https://github.com/fcitx/fcitx5/issues/996

--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -81,7 +81,8 @@
         "rewrite": {
             "(.*) — Mozilla Firefox": "Firefox",
             "(.*) - Google Chrome": "Chrome",
-			"(.*) - Code - OSS": "VS Code"
+			"(.*) - Code - OSS": "VS Code",
+			"(.*) — 1Password": "1Password"
         },
         "separate-outputs": true
 	},
