Fix XMODIFIERS IM Error

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -82,6 +82,9 @@ env = QT_SCALE_FACTOR, 1.15
 env = GDK_DPI_SCALE, 1.15
 # env = GDK_SCALE, 1.5
 
+# Fix XMODIFIERS IM Error
+export XMODIFIERS=@im=fcitx
+
 # Nvidia Environment
 # See https://wiki.hyprland.org/Nvidia/
 env = LIBVA_DRIVER_NAME,nvidia
@@ -410,3 +413,6 @@ windowrulev2 = float, class:(QQ), title:设置
 windowrulev2 = float, class:(QQ), title:收藏
 windowrulev2 = float, class:(QQ), title:^(.*)(的聊天记录)$
 windowrulev2 = float, class:(QQ), title:文件管理器
+
+# CDDA
+windowrulev2 = float, class:(Catapult)
