fix: add fcitx env hypr conf

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -83,7 +83,12 @@ env = GDK_DPI_SCALE, 1.15
 # env = GDK_SCALE, 1.5
 
 # Fix XMODIFIERS IM Error
-export XMODIFIERS=@im=fcitx
+env = XIM, fcitx
+env = XIM_PROGRAM, fcitx
+env = INPUT_METHOD, fcitx
+env = GTK_IM_MODULE, wayland
+env = QT_IM_MODULE, "wayland;fcitx;ibus"
+env = XMODIFIERS, @im=fcitx
 
 # Nvidia Environment
 # See https://wiki.hyprland.org/Nvidia/
