fix hyprland conf

--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -1,6 +1,7 @@
 # -*- conf -*-
 # default config at /etc/xdg/foot/foot.ini
 
+shell=/usr/bin/fish
 font=Source Code Pro:size=18
 
 [environment]
@@ -16,6 +17,8 @@ font=Source Code Pro:size=18
 
 
 [url]
+launch=xdg-open ${url}
+protocols=http, https, ftp, ftps, file, gemini, gopher
 
 
 [cursor]
