--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -1,423 +1,22 @@
-################
-### MONITORS ###
-################
-
-# See https://wiki.hyprland.org/Configuring/Monitors/
-# Command: hyprctl monitors all
-# Def: monitor=,preferred,auto,auto
-monitor=,highres,auto,1.2
-
-
-###################
-### MY PROGRAMS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-# Set programs that you use
-$terminal = foot fish
-$fileManager = foot ranger
-$menu = wmenu-run -f "SourceCodePro bold 18" -i -N 242424 -n eeeeee -S 8533ff -s 000000 | xargs exec -
-
-
-#################
-### AUTOSTART ###
-#################
-
-# Autostart necessary processes
-# exec-once 要重新登入桌面才會啟動
-# exec      每編輯一次設定檔就會自動重啟
-
-# DPI
-exec-once = echo "Xft.dpi: 140" | xrdb -merge
-exec-once = xrdb ~/.Xresources
-
-# 匯入 systemd 環境變數
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP DISPLAY
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
-# 桌布程式
-# See https://wiki.hyprland.org/Hypr-Ecosystem/hyprpaper/
-# Conf: ~/.config/hypr/hyprpaper.conf
-exec-once = bash ~/.config/hypr/scripts/swallpaper.sh
-
-# 中文輸入法
-exec-once = fcitx5 -d
-
-# 剪貼簿服務 Clipboard manager
-# exec-once = wl-paste --watch cliphist store
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --type image --watch cliphist store
-
-# 狀態欄
-exec-once = waybar &
-
-# 通知
-exec-once = mako
-
-# 定时
-exec-once = hypridle
-
-# 第一次启动开启锁屏
-exec-once = pidof hyprlock || hyprlock
-
-
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
-
-# 設定滑鼠大小
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-
-# 指定目前的工作階段為 Hyprland
-env = XDG_CURRENT_DESKTOP, Hyprland
-env = XDG_SESSION_TYPE, wayland
-env = XDG_SESSION_DESKTOP, Hyprland
-
-# 設定全域縮放比例
-env = QT_AUTO_SCREEN_SCALE_FACTOR, 1
-env = QT_SCALE_FACTOR, 1.15
-env = GDK_DPI_SCALE, 1.15
-# env = GDK_SCALE, 1.5
-
-# Fix XMODIFIERS IM Error
-# env = XIM, fcitx
-# env = XIM_PROGRAM, fcitx
-# env = INPUT_METHOD, fcitx
-# env = GTK_IM_MODULE, wayland
-# env = QT_IM_MODULE, "wayland;fcitx;ibus"
-env = XMODIFIERS, @im=fcitx
-
-# Nvidia Environment
-# See https://wiki.hyprland.org/Nvidia/
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-
-cursor {
-    no_hardware_cursors = true
-}
-
-
-#####################
-### LOOK AND FEEL ###
-#####################
-
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
-# https://wiki.hyprland.org/Configuring/Variables/#general
-general {
-    gaps_in = 5
-    gaps_out = 20
-
-    border_size = 2
-
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
-
-    # 視窗排列模式
-    # dwindle 模式即 bspwm，視窗大小是動態變化的
-    # master 模式就是 i3wm 那樣，新視窗會從右邊依序分割開啟
-    layout = dwindle
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
-decoration {
-    rounding = 8
-
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
-
-    # drop_shado = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(00000000)
-
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
-    blur {
-        enabled = false
-        size = 2
-        passes = 3
-        vibrancy = 0.1696
-    }
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#animations
-animations {
-    enabled = true
-    first_launch_animation = false
-
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
-}
-
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
-}
-
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-master {
-    new_status = master
-}
-
-# 關閉 Hyprland 的預設桌布及看板娘
-# See https://wiki.hyprland.org/Configuring/Variables/#misc
-misc {
-    # Set to 0 or 1 to disable the anime mascot wallpapers
-    force_default_wallpaper = -1
-    # If true disables the random hyprland logo / anime girl background. :(
-    disable_hyprland_logo = false 
-}
-
-
-#############
-### INPUT ###
-#############
-
-# 輸入(Input)
-# https://wiki.hyprland.org/Configuring/Variables/#input
-input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-
-    follow_mouse = 1
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
-    # 設定輕觸等同按下，觸控板等同滑鼠右鍵，雙指點選為左鍵
-    touchpad {
-        # tap-to-click = true
-        # natural_scroll = false
-	    natural_scroll = no
-        disable_while_typing = true
-        clickfinger_behavior = true
-        tap-to-click = true
-    }
-}
-
-# 啟用觸控版切換工作區的手勢
-# See https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
-
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = 0
-}
-
-# 關閉 XWayland 的自動縮放，防止程式模糊
-xwayland {
-    force_zero_scaling = true
-}
-
-
-###################
-### KEYBINDINGS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-# 想確認具體按鍵代碼可以用 wev 程式偵測
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-
-# Sets "Windows" key as main modifier
-$mainMod = SUPER
-
-# Terminal
-bind = $mainMod, Return, exec, $terminal
-
-# Kill View
-bind = $mainMod, Q, killactive,
-
-# Exit Hyprland
-bind = $mainMod Shift, Q, exit,
-
-# Menu
-bind = $mainMod Shift, Return, exec, $menu
-bind=$mainMod, D, exec, $menu
-
-# Window
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindl
-bind = $mainMod, F, fullscreen,
-
-# 将当前窗口切换到浮动模式
-bind = $mainMod, SPACE, togglefloating,
-
-# 截图
-bind = ,Print, exec, slurp | grim -g -
-bind = $mainMod, G, exec, slurp | grim -g - 
-bind = $mainMod Shift, G, exec, grim -g "$(slurp)" - | swappy -f -
-
-# Redshift fork on wayland
-bind = $mainMod, M, exec, gammastep -O 5000
-bind = $mainMod Shift, M, exec, killall gammastep
-
-# Use wmenu to select form the clipboard
-bind = $mainMod, V, exec, cliphist list | wmenu -l 9 -f "SourceCodePro Medium 14" -i -N 242424 -n eeeeee -S 249988 -s 000000 | cliphist decode | wl-copy
-
-# 更换壁纸
-bind = $mainMod, N, exec, wpaperctl next-wallpaper
-
-# 文件管理器
-bind = $mainMod, E, exec, foot ranger
-
-# 锁定屏幕
-bind = $mainMod, Escape, exec, pidof hyprlock || hyprlock
-
-# Move focus with mainMod + arrow keys
-# Super + hjkl：切换焦点窗口
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, j, movefocus, u
-bind = $mainMod, k, movefocus, d
-
-# Super + Shift + hjkl：移动窗口
-bind=$mainMod Shift, h, movewindow, l
-bind=$mainMod Shift, l, movewindow, r
-bind=$mainMod Shift, j, movewindow, u
-bind=$mainMod Shift, k, movewindow, d
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Super + TAB：切换到上一个工作区
-binds {
-    workspace_back_and_forth = false
-    allow_workspace_cycles = true
-}
-bind = SUPER, TAB, workspace, previous
-
-# Super + ,.：切换上下工作区
-bind = SUPER, comma, workspace, e-1
-bind = SUPER, period, workspace, e+1
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# 功能键
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
-
-# Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
-
-# 调整窗口大小
-bind = SUPER, W, submap, resize
-submap = resize
-    binde=, h, resizeactive, -10 0
-    binde=, l, resizeactive, 10 0
-    binde=, k, resizeactive, 0 -10
-    binde=, j, resizeactive, 0 10
-    bind=, escape, submap, reset
-submap=reset
-
-
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-# 如果不知道具體名字請用 hyprctl clients 指令查詢
-
-# Ignore maximize requests from apps. You'll probably like this.
-windowrulev2 = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-
-# xwayland
-windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
-windowrulev2 = noanim, class:^(xwaylandvideobridge)$
-windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
-windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
-windowrulev2 = noblur, class:^(xwaylandvideobridge)$
-
-# galculator
-windowrule = float, ^(galculator)$
-
-# WebApp
-windowrule = float, ^(WebApp-Whatsapp5833)$
-windowrule = float, ^(WebApp-Horario4814)$
-windowrule = size 649 229, ^(WebApp-Horario4814)$
-windowrulev2 = tile, class:(WebApp-NotionCalendar7553)
-
-# QQ
-# windowrulev2 = float, title:QQ
-windowrulev2 = float, class:(QQ), title:图片查看器
-windowrulev2 = float, class:(QQ), title:QQ机器人
-windowrulev2 = float, class:(QQ), title:腾讯频道
-windowrulev2 = float, class:(QQ), title:设置
-windowrulev2 = float, class:(QQ), title:收藏
-windowrulev2 = float, class:(QQ), title:^(.*)(的聊天记录)$
-windowrulev2 = float, class:(QQ), title:文件管理器
-
-# CDDA
-windowrulev2 = float, class:(Catapult)
+#  _   _                  _                 _  
+# | | | |_   _ _ __  _ __| | __ _ _ __   __| | 
+# | |_| | | | | '_ \| '__| |/ _` | '_ \ / _` | 
+# |  _  | |_| | |_) | |  | | (_| | | | | (_| | 
+# |_| |_|\__, | .__/|_|  |_|\__,_|_| |_|\__,_| 
+#        |___/|_|                              
+#  
+# ----------------------------------------------------- 
+# Full documentation https://wiki.hyprland.org
+
+source = ~/.config/hypr/conf/monitor.conf
+source = ~/.config/hypr/conf/autostart.conf
+source = ~/.config/hypr/conf/environments.conf
+source = ~/.config/hypr/conf/general.conf
+source = ~/.config/hypr/conf/decoration.conf
+source = ~/.config/hypr/conf/animations.conf
+source = ~/.config/hypr/conf/layouts.conf
+source = ~/.config/hypr/conf/input.conf
+source = ~/.config/hypr/conf/gestures.conf
+source = ~/.config/hypr/conf/misc.conf
+source = ~/.config/hypr/conf/binds.conf
+source = ~/.config/hypr/conf/windowrules.conf
