--- a/dot_config/hypr/conf/autostart.conf
+++ b/dot_config/hypr/conf/autostart.conf
@@ -29,7 +29,7 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
 # 狀態欄
-exec-once = waybar &
+exec-once = waybar
 
 # 通知
 exec-once = mako
@@ -39,3 +39,6 @@ exec-once = hypridle
 
 # 第一次启动开启锁屏
 exec-once = pidof hyprlock || hyprlock
+
+# 词典
+exec-once = goldendict &
