update hyprland conf

--- a/dot_config/hypr/conf/binds.conf
+++ b/dot_config/hypr/conf/binds.conf
@@ -20,7 +20,7 @@ bind = $mainMod Shift, Q, exit,
 
 # Menu
 bind = $mainMod Shift, Return, exec, wmenu-run -f "SourceCodePro bold 18" -i -N 242424 -n eeeeee -S 8533ff -s 000000 | xargs exec -
-bind=$mainMod, D, exec, wmenu-run -f "SourceCodePro bold 18" -i -N 242424 -n eeeeee -S 8533ff -s 000000 | xargs exec -
+bind=$mainMod, D, exec, rofi -show drun
 
 # Window
 # exec - 执行一个 shell 命令
