update hyprland conf

--- a/dot_config/hypr/conf/decoration.conf
+++ b/dot_config/hypr/conf/decoration.conf
@@ -6,10 +6,12 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    # drop_shado = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(00000000)
+    shadow {
+        enabled = true
+        range = 4
+        render_power = 3
+        color = rgba(00000000)
+    }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -18,6 +20,4 @@ decoration {
         passes = 3
         vibrancy = 0.1696
     }
-
-    # screen_shader = ~/.config/hypr/glsl/bluelight.glsl
 }
