fix wpaperd startup mode

--- a/dot_config/hypr/conf/autostart.conf
+++ b/dot_config/hypr/conf/autostart.conf
@@ -17,8 +17,8 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 # 桌布程式
 # See https://wiki.hyprland.org/Hypr-Ecosystem/hyprpaper/
 # Conf: ~/.config/hypr/hyprpaper.conf
-# exec-once = wpaperd -d
-exec-once = bash ~/.config/hypr/scripts/swallpaper.sh
+# exec-once = bash ~/.config/hypr/scripts/swallpaper.sh
+exec-once = wpaperd -d
 
 # 中文輸入法
 exec-once = fcitx5 -d
