conf: display startup

--- a/dot_config/hypr/conf/environments.conf
+++ b/dot_config/hypr/conf/environments.conf
@@ -4,6 +4,12 @@
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
+
+# See https://wiki.hyprland.org/Configuring/Multi-GPU/
+# Telling Hyprland which GPU to use 
+# env = AQ_DRM_DEVICES,/dev/dri/card2:/dev/dri/card1
+# env = AQ_DRM_DEVICES,/dev/dri/card2
+
 # 設定滑鼠大小
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
@@ -33,7 +39,33 @@ env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = NVD_BACKEND,direct
 
 cursor {
+    # Makes HW cursors use a CPU buffer.
+    # Required on Nvidia to have HW cursors.
+    # Experimental
+    # use_cpu_buffer = true
+    allow_dumb_copy = true
+    
     no_hardware_cursors = true
+}
+
+env = AQ_NO_MODIFIERS,1
+
+render {
+    # 是否启用显式同步支持
+    explicit_sync = 1
+    # 是否为 KMS 层启用显式同步支持
+    explicit_sync_kms = 1
+    # 启用直接扫描。
+    # 尝试在屏幕上只有一个全屏应用程序情况下减少延迟
+    # 如果全屏应用程序显示图形故障，则将其设置为 false
+    direct_scanout = true
+}
+
+#  tail -f $XDG_RUNTIME_DIR/hypr/$HYPRLAND_INSTANCE_SIGNATURE/hyprland.log
+debug {
+    enable_stdout_logs = true
+    disable_logs = false
 }
