--- a/dot_config/hypr/conf/monitor.conf
+++ b/dot_config/hypr/conf/monitor.conf
@@ -5,4 +5,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # Command: hyprctl monitors all
 # Def: monitor=,preferred,auto,auto
-monitor=,highres,auto,1.2
+# monitor =,preferred,auto,1.2
+# monitor=,highres,auto,1.2
+monitor=,2880x1800@90,auto,1.2
