fix: wierd pink glitchy artifacts

--- a/dot_config/hypr/conf/environments.conf
+++ b/dot_config/hypr/conf/environments.conf
@@ -46,7 +46,7 @@ cursor {
     # Required on Nvidia to have HW cursors.
     # Experimental
     # use_cpu_buffer = true
-    allow_dumb_copy = true
+    allow_dumb_copy = false
     
     no_hardware_cursors = true
 }
@@ -55,13 +55,13 @@ env = AQ_NO_MODIFIERS,1
 
 render {
     # 是否启用显式同步支持
-    explicit_sync = 1
+    explicit_sync = 0
     # 是否为 KMS 层启用显式同步支持
-    explicit_sync_kms = 1
+    explicit_sync_kms = 0
     # 启用直接扫描。
     # 尝试在屏幕上只有一个全屏应用程序情况下减少延迟
     # 如果全屏应用程序显示图形故障，则将其设置为 false
-    direct_scanout = true
+    direct_scanout = false
 }
 
 #  tail -f $XDG_RUNTIME_DIR/hypr/$HYPRLAND_INSTANCE_SIGNATURE/hyprland.log
