--- a/dot_config/hypr/conf/misc.conf
+++ b/dot_config/hypr/conf/misc.conf
@@ -4,7 +4,11 @@ misc {
     # Set to 0 or 1 to disable the anime mascot wallpapers
     force_default_wallpaper = -1
     # If true disables the random hyprland logo / anime girl background. :(
-    disable_hyprland_logo = false 
+    disable_hyprland_logo = false
+
+    # https://github.com/hyprwm/Hyprland/issues/8631
+    vfr = 0
+    vrr = 0
 }
 
 # Example per-device config
