fix: update hyprland conf

--- a/dot_config/hypr/conf/autostart.conf
+++ b/dot_config/hypr/conf/autostart.conf
@@ -15,18 +15,13 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # 桌布程式
-# See https://wiki.hyprland.org/Hypr-Ecosystem/hyprpaper/
-# Conf: ~/.config/hypr/hyprpaper.conf
-# exec-once = bash ~/.config/hypr/scripts/swallpaper.sh
 exec-once = wpaperd -d
 
 # 中文輸入法
 exec-once = fcitx5 -d
 
 # 剪貼簿服務 Clipboard manager
-# exec-once = wl-paste --watch cliphist store
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --type image --watch cliphist store
+exec-once = wl-paste --watch cliphist store
 
 # 狀態欄
 exec-once = waybar
@@ -39,6 +34,3 @@ exec-once = hypridle
 
 # 第一次启动开启锁屏
 exec-once = pidof hyprlock || hyprlock
-
-# 词典
-# exec-once = goldendict &
