--- a/dot_config/hypr/conf/binds.conf
+++ b/dot_config/hypr/conf/binds.conf
@@ -109,7 +109,8 @@ binds {
     workspace_back_and_forth = false
     allow_workspace_cycles = true
 }
-bind = SUPER, TAB, workspace, previous
+bind = ALT, TAB, workspace, previous
+bind = SUPER, Tab, exec, bash ${HOME}/.config/hypr/scripts/switch-windows.sh
 
 # Super + ,.：切换上下工作区
 bind = SUPER, comma, workspace, e-1
