--- a/dot_config/hypr/conf/gestures.conf
+++ b/dot_config/hypr/conf/gestures.conf
@@ -1,5 +1,6 @@
 # 啟用觸控版切換工作區的手勢
 # See https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
+    workspace_swipe_distance = 200
 }
