feat: update hyprland bind key conf

--- a/dot_config/hypr/conf/binds.conf
+++ b/dot_config/hypr/conf/binds.conf
@@ -47,6 +47,15 @@ bind = ,Print, exec, slurp | grim -g -
 bind = $mainMod, G, exec, slurp | grim -g - 
 bind = $mainMod Shift, G, exec, grim -g "$(slurp)" - | swappy -f -
 
+# 快速打开书签
+bind = $mainMod, B, exec, ~/.local/bin/arch-bookmark
+
+# 快速打开书籍
+bind = $mainMod Shift, B, exec, ~/.local/bin/arch-books
+
+# 快速打开离线 wiki
+bind = $mainMod, W, exec, ~/.local/bin/arch-wiki
+
 # Redshift fork on wayland
 bind = $mainMod, M, exec, gammastep -O 5000
 bind = $mainMod Shift, M, exec, killall gammastep
@@ -54,11 +63,14 @@ bind = $mainMod Shift, M, exec, killall gammastep
 # Use wmenu to select form the clipboard
 bind = $mainMod, V, exec, cliphist list | wmenu -l 9 -f "SourceCodePro Medium 14" -i -N 242424 -n eeeeee -S 249988 -s 000000 | cliphist decode | wl-copy
 
+# 快速打开 chezmoi 配置文件
+bind = $mainMod Shift, V, exec, ~/.local/bin/arch-config-edit
+
 # 更换壁纸
 bind = $mainMod, N, exec, wpaperctl next-wallpaper
 
 # 文件管理器
-bind = $mainMod, E, exec, foot ranger
+bind = $mainMod, E, exec, spacedrive
 
 # 锁定屏幕
 bind = $mainMod, Escape, exec, pidof hyprlock || hyprlock
@@ -116,9 +128,18 @@ bind = SUPER, Tab, exec, bash ${HOME}/.config/hypr/scripts/switch-windows.sh
 bind = SUPER, comma, workspace, e-1
 bind = SUPER, period, workspace, e+1
 
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# Special workspace
+bind = SUPER, X, movetoworkspacesilent, special:minimized
+bind = SUPER, Z, togglespecialworkspace, minimized
+bind = SUPER, Z, submap, minimized
+
+submap = minimized
+    bind = , Q, killactive
+    bind = , mouse:272, movetoworkspace, +0
+    bind = , mouse:272, submap, reset
+    bind = , escape, togglespecialworkspace, minimized
+    bind = , escape, submap, reset
+submap = reset
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -144,7 +165,8 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # 调整窗口大小
-bind = SUPER, W, submap, resize
+bind = SUPER, C, submap, resize
+
 submap = resize
     binde=, h, resizeactive, -10 0
     binde=, l, resizeactive, 10 0
