feat: add clipboard or proxy script.

--- a/dot_config/hypr/conf/autostart.conf
+++ b/dot_config/hypr/conf/autostart.conf
@@ -32,5 +32,8 @@ exec-once = mako
 # 定时
 exec-once = hypridle
 
+# Fix buffer copy&paste between wayland and xwayland
+exec-once = sleep 2 && $HOME/.config/hypr/scripts/clipboard-sync.sh
+
 # 第一次启动开启锁屏
 exec-once = pidof hyprlock || hyprlock
