--- a/dot_config/hypr/conf/autostart.conf
+++ b/dot_config/hypr/conf/autostart.conf
@@ -33,7 +33,7 @@ exec-once = mako
 exec-once = hypridle
 
 # Fix buffer copy&paste between wayland and xwayland
-exec-once = sleep 2 && $HOME/.config/hypr/scripts/clipboard-sync.sh
+exec-once = sleep 2 && clipsync watch without-notifications
 
 # 第一次启动开启锁屏
 exec-once = pidof hyprlock || hyprlock
