fix: wayland and xwayland sync cliphist err

--- a/dot_config/hypr/conf/autostart.conf
+++ b/dot_config/hypr/conf/autostart.conf
@@ -21,7 +21,8 @@ exec-once = wpaperd -d
 exec-once = fcitx5 -d
 
 # 剪貼簿服務 Clipboard manager
-exec-once = wl-paste --watch cliphist store
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
 
 # 狀態欄
 exec-once = waybar
@@ -33,7 +34,7 @@ exec-once = mako
 exec-once = hypridle
 
 # Fix buffer copy&paste between wayland and xwayland
-exec-once = sleep 2 && clipsync watch without-notifications
+exec-once = bash ~/.local/bin/clipsync &
 
 # 第一次启动开启锁屏
 exec-once = pidof hyprlock || hyprlock
