--- a/dot_config/hypr/conf/binds.conf
+++ b/dot_config/hypr/conf/binds.conf
@@ -61,7 +61,7 @@ bind = $mainMod, M, exec, gammastep -O 5000
 bind = $mainMod Shift, M, exec, killall gammastep
 
 # Use wmenu to select form the clipboard
-bind = $mainMod, V, exec, cliphist list | wmenu -l 9 -f "SourceCodePro Medium 14" -i -N 242424 -n eeeeee -S 249988 -s 000000 | cliphist decode | wl-copy
+bind = $mainMod, V, exec, ~/.local/bin/cliphist-list
 
 # 快速打开 chezmoi 配置文件
 bind = $mainMod Shift, V, exec, ~/.local/bin/arch-config-edit
