fix: update conf

--- a/dot_config/hypr/conf/environments.conf
+++ b/dot_config/hypr/conf/environments.conf
@@ -11,8 +11,12 @@
 # env = AQ_DRM_DEVICES,/dev/dri/card2
 
 # 設定滑鼠大小
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+# size: 16 20 22 24 28 32 40 48 56 64 72 80 88 96
+# theme: /usr/share/icons
+# hyprctl setcursor <theme> <size>
+# env = HYPRCURSOR_THEME,Bibata-Original-Classic
+env = XCURSOR_SIZE,32
+env = HYPRCURSOR_SIZE,32
 
 # 指定目前的工作階段為 Hyprland
 env = XDG_CURRENT_DESKTOP, Hyprland
@@ -40,7 +44,7 @@ cursor {
     # Required on Nvidia to have HW cursors.
     # Experimental
     # use_cpu_buffer = true
-    allow_dumb_copy = false
+    allow_dumb_copy = true
     
     no_hardware_cursors = true
 }
@@ -49,13 +53,13 @@ env = AQ_NO_MODIFIERS,1
 
 render {
     # 是否启用显式同步支持
-    explicit_sync = 0
+    explicit_sync = 1
     # 是否为 KMS 层启用显式同步支持
-    explicit_sync_kms = 0
+    explicit_sync_kms = 1
     # 启用直接扫描。
     # 尝试在屏幕上只有一个全屏应用程序情况下减少延迟
     # 如果全屏应用程序显示图形故障，则将其设置为 false
-    direct_scanout = false
+    direct_scanout = true
 }
 
 #  tail -f $XDG_RUNTIME_DIR/hypr/$HYPRLAND_INSTANCE_SIGNATURE/hyprland.log
