update: add uTools conf

--- a/dot_config/hypr/conf/misc.conf
+++ b/dot_config/hypr/conf/misc.conf
@@ -9,6 +9,12 @@ misc {
     # https://github.com/hyprwm/Hyprland/issues/8631
     vfr = 0
     vrr = 0
+
+    # 适配 uTools
+    # 让鼠标移动到活动窗口上
+    # 鼠标不在屏幕中间时也可以正常工作
+    # https://yuanliao.info/d/4948-wayland/9
+    focus_on_activate = true
 }
 
 # Example per-device config
