--- a/dot_config/hypr/conf/windowrules.conf
+++ b/dot_config/hypr/conf/windowrules.conf
@@ -37,3 +37,6 @@ windowrulev2 = float, class:(QQ), title:设置
 windowrulev2 = float, class:(QQ), title:收藏
 windowrulev2 = float, class:(QQ), title:^(.*)(的聊天记录)$
 windowrulev2 = float, class:(QQ), title:文件管理器
+
+# uTools
+windowrule = stayfocused,(uTools)
