fix: hw cpu buffer conf update

--- a/dot_config/hypr/conf/environments.conf
+++ b/dot_config/hypr/conf/environments.conf
@@ -43,8 +43,8 @@ cursor {
     # Makes HW cursors use a CPU buffer.
     # Required on Nvidia to have HW cursors.
     # Experimental
-    # use_cpu_buffer = true
-    allow_dumb_copy = true
+    use_cpu_buffer = true
+    # allow_dumb_copy = true
     
     no_hardware_cursors = true
 }
