fix: add fish LANG="zh" tldr conf

--- a/dot_config/hypr/conf/environments.conf
+++ b/dot_config/hypr/conf/environments.conf
@@ -59,7 +59,7 @@ render {
     # 启用直接扫描。
     # 尝试在屏幕上只有一个全屏应用程序情况下减少延迟
     # 如果全屏应用程序显示图形故障，则将其设置为 false
-    direct_scanout = true
+    direct_scanout = false
 }
 
 #  tail -f $XDG_RUNTIME_DIR/hypr/$HYPRLAND_INSTANCE_SIGNATURE/hyprland.log
