--- a/dot_config/hypr/conf/misc.conf
+++ b/dot_config/hypr/conf/misc.conf
@@ -6,9 +6,14 @@ misc {
     # If true disables the random hyprland logo / anime girl background. :(
     disable_hyprland_logo = false
 
+    # PSR BUG
+    # 就屏幕内容没有更新的时候不刷新像素导致闪烁花屏
     # https://github.com/hyprwm/Hyprland/issues/8631
-    vfr = 0
-    vrr = 0
+    # 在 GRUB_CMDLINE_LINUX_DEFAULT 中添加
+    # 修复闪烁花屏 amdgpu.dcdebugmask=0x10
+    # 解决唤醒白屏 amdgpu.sg_display=0
+    # vfr = 0
+    # vrr = 0
 
     # 适配 uTools
     # 让鼠标移动到活动窗口上
