fix: optimize hyprland

--- a/dot_config/hypr/conf/general.conf
+++ b/dot_config/hypr/conf/general.conf
@@ -5,18 +5,25 @@
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
+    # 窗口之间的间隙
     gaps_in = 5
+    # 窗口与显示器边缘之间的间隙
     gaps_out = 20
 
-    border_size = 2
+    # 窗口边框的大小
+    border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
 
+    # 启用通过点击并拖动边框和间隙来调整窗口大小的功能
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
 
+    # 是否允许撕裂发生
+    # 需要添加规则 immediate
+    # windowrulev2 = immediate, class:^(*)$
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
