--- a/dot_config/hypr/conf/input.conf
+++ b/dot_config/hypr/conf/input.conf
@@ -10,14 +10,22 @@ input {
     kb_model =
     kb_options =
     kb_rules =
+
+    # 指定光标移动是否以及如何影响窗口焦点
     follow_mouse = 1
+
+    # 设置鼠标输入灵敏度
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     # 設定輕觸等同按下，觸控板等同滑鼠右鍵，雙指點選為左鍵
     touchpad {
+        # 反转滚动方向
 	    natural_scroll = no
+        # 输入时禁用触摸板
         disable_while_typing = true
+        # 用1、2或3个手指按压，分别发送左键、右键和中键
         clickfinger_behavior = true
+        # 用1、2或3个手指轻触，分别发送左键、右键和中键
         tap-to-click = true
     }
 }
