--- a/dot_config/hypr/conf/layouts.conf
+++ b/dot_config/hypr/conf/layouts.conf
@@ -1,10 +1,15 @@
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    # 启用伪平铺（在平铺时保留其浮动大小）
+    # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    pseudotile = true
+
+    # 无论容器发生什么变化，分割（侧/顶）都不会改变
     preserve_split = true # You probably want this
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
+    # 设置新窗口变为主窗口
     new_status = master
 }
