--- a/dot_config/hypr/conf/misc.conf
+++ b/dot_config/hypr/conf/misc.conf
@@ -1,10 +1,17 @@
 # 關閉 Hyprland 的預設桌布及看板娘
 # See https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
+    # 强制应用默认壁纸。设置为 0 或 1 会禁用动漫背景
     # Set to 0 or 1 to disable the anime mascot wallpapers
     force_default_wallpaper = -1
+
+    # 禁用随机 Hyprland 动漫女孩背景
     # If true disables the random hyprland logo / anime girl background. :(
-    disable_hyprland_logo = false
+    disable_hyprland_logo = true
+
+    # 禁用 Hyprland 启动画面渲染
+    # disables the Hyprland splash rendering.
+    disable_splash_rendering = true
 
     # PSR BUG
     # 就屏幕内容没有更新的时候不刷新像素导致闪烁花屏
@@ -12,22 +19,26 @@ misc {
     # 在 GRUB_CMDLINE_LINUX_DEFAULT 中添加
     # 修复闪烁花屏 amdgpu.dcdebugmask=0x10
     # 解决唤醒白屏 amdgpu.sg_display=0
-    # vfr = 0
-    # vrr = 0
+    vfr = true
+    vrr = 0
+
+    # 不会自动重新加载
+    # 需要使用 hyprctl reload 重新加载
+    disable_autoreload = true
 
     # 适配 uTools
     # 让鼠标移动到活动窗口上
     # 鼠标不在屏幕中间时也可以正常工作
     # https://yuanliao.info/d/4948-wayland/9
-    focus_on_activate = true
+    # focus_on_activate = true
 }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = 0
-}
+# device {
+#     name = epic-mouse-v1
+#     sensitivity = 0
+# }
 
 # 關閉 XWayland 的自動縮放，防止程式模糊
 xwayland {
