--- a/dot_config/hypr/conf/animations.conf
+++ b/dot_config/hypr/conf/animations.conf
@@ -1,6 +1,8 @@
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
+    # 启用动画
     enabled = true
+    # 首次启动动画
     first_launch_animation = false
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
