--- a/dot_config/hypr/conf/environments.conf
+++ b/dot_config/hypr/conf/environments.conf
@@ -37,19 +37,20 @@ env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = NVD_BACKEND,direct
 
 cursor {
     # Makes HW cursors use a CPU buffer.
     # Required on Nvidia to have HW cursors.
     # Experimental
-    # use_cpu_buffer = true
+    use_cpu_buffer = true
     # allow_dumb_copy = true
     
+    # 替代 WLR_NO_HARDWARE_CURSORS
+    # https://github.com/hyprwm/Hyprland/issues/6591
     no_hardware_cursors = true
 }
 
-env = AQ_NO_MODIFIERS,1
+# env = AQ_NO_MODIFIERS,1
 
 render {
     # 是否启用显式同步支持
@@ -59,11 +60,11 @@ render {
     # 启用直接扫描。
     # 尝试在屏幕上只有一个全屏应用程序情况下减少延迟
     # 如果全屏应用程序显示图形故障，则将其设置为 false
-    direct_scanout = false
+    direct_scanout = true
 }
 
 #  tail -f $XDG_RUNTIME_DIR/hypr/$HYPRLAND_INSTANCE_SIGNATURE/hyprland.log
-debug {
-    enable_stdout_logs = true
-    disable_logs = false
-}
+# debug {
+#     enable_stdout_logs = true
+#     disable_logs = false
+# }
