fix: optimize configuration

--- a/dot_config/hypr/conf/autostart.conf
+++ b/dot_config/hypr/conf/autostart.conf
@@ -33,6 +33,9 @@ exec-once = mako
 # 定时
 exec-once = hypridle
 
+# open fish shell
+exec-once = fish &
+
 # Fix buffer copy&paste between wayland and xwayland
 exec-once = bash ~/.local/bin/clipsync &
 
