--- a/dot_config/hypr/hyprlock.conf
+++ b/dot_config/hypr/hyprlock.conf
@@ -1,7 +1,7 @@
 # BACKGROUND
 background {
     monitor = 
-    path = ~/.config/wallpapers/gruvbox_2.png
+    path = ~/pic/wallpapers/98.png
     blur_passes = 2
     contrast = 0.9
     brightness = 0.5
