fix: some optimizations

--- a/dot_config/hypr/conf/binds.conf
+++ b/dot_config/hypr/conf/binds.conf
@@ -53,8 +53,11 @@ bind = $mainMod, B, exec, ~/.local/bin/arch-bookmark
 # 快速打开书籍
 bind = $mainMod Shift, B, exec, ~/.local/bin/arch-books
 
+# 打开 WIFI 管理器
+bind = $mainMod, W, exec, ~/.local/bin/iwdmenu
+
 # 快速打开离线 wiki
-bind = $mainMod, W, exec, ~/.local/bin/arch-wiki
+bind = $mainMod Shift, W, exec, ~/.local/bin/arch-wiki
 
 # Redshift fork on wayland
 bind = $mainMod, M, exec, gammastep -O 5000
@@ -74,6 +77,9 @@ bind = $mainMod, E, exec, spacedrive
 
 # 锁定屏幕
 bind = $mainMod, Escape, exec, pidof hyprlock || hyprlock
+
+# 打开电源管理器
+bind = $mainMod, BackSpace, exec, ~/.local/bin/powermenu
 
 # Move focus with mainMod + arrow keys
 # Super + hjkl：切换焦点窗口
@@ -122,16 +128,16 @@ binds {
     allow_workspace_cycles = true
 }
 bind = ALT, TAB, workspace, previous
-bind = SUPER, Tab, exec, bash ${HOME}/.config/hypr/scripts/switch-windows.sh
+bind = $mainMod, Tab, exec, bash ${HOME}/.config/hypr/scripts/switch-windows.sh
 
 # Super + ,.：切换上下工作区
-bind = SUPER, comma, workspace, e-1
-bind = SUPER, period, workspace, e+1
+bind = $mainMod, comma, workspace, e-1
+bind = $mainMod, period, workspace, e+1
 
 # Special workspace
-bind = SUPER, X, movetoworkspacesilent, special:minimized
-bind = SUPER, Z, togglespecialworkspace, minimized
-bind = SUPER, Z, submap, minimized
+bind = $mainMod, X, movetoworkspacesilent, special:minimized
+bind = $mainMod, Z, togglespecialworkspace, minimized
+bind = $mainMod, Z, submap, minimized
 
 submap = minimized
     bind = , Q, killactive
@@ -165,7 +171,7 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # 调整窗口大小
-bind = SUPER, C, submap, resize
+bind = $mainMod, C, submap, resize
 
 submap = resize
     binde=, h, resizeactive, -10 0
