fix: add hyprland submap

--- a/dot_config/hypr/conf/autostart.conf
+++ b/dot_config/hypr/conf/autostart.conf
@@ -17,6 +17,9 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 # 桌布程式
 exec-once = wpaperd -d
 
+# 第一次启动开启锁屏
+exec-once = pidof hyprlock || hyprlock
+
 # 中文輸入法
 exec-once = fcitx5 -d
 
@@ -24,11 +27,11 @@ exec-once = fcitx5 -d
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
-# 狀態欄
-exec-once = waybar
-
 # 通知
 exec-once = mako
+
+# 狀態欄
+exec-once = waybar
 
 # 定时
 exec-once = hypridle
@@ -39,5 +42,5 @@ exec-once = fish &
 # Fix buffer copy&paste between wayland and xwayland
 exec-once = bash ~/.local/bin/clipsync &
 
-# 第一次启动开启锁屏
-exec-once = pidof hyprlock || hyprlock
+# 打开现代输入仿真工具
+exec-once = ydotoold &
