--- a/dot_config/hypr/conf/binds.conf
+++ b/dot_config/hypr/conf/binds.conf
@@ -170,13 +170,27 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-# 调整窗口大小
-bind = $mainMod, C, submap, resize
+# 切换移动模式
+bind = $mainMod, C, submap, mouse_move
 
-submap = resize
+submap = mouse_move
+    # 使用 ydotool 移动鼠标
+    binde = , a, exec, ydotool mousemove -- -20 0     # 向左移动鼠标
+    binde = , d, exec, ydotool mousemove -- 20 0      # 向右移动鼠标
+    binde = , w, exec, ydotool mousemove -- 0 -20     # 向上移动鼠标
+    binde = , s, exec, ydotool mousemove -- 0 20      # 向下移动鼠标
+
+    # 使用 ydotool 模拟鼠标点击
+    binde = , space, exec, ydotool click 1            # 左键点击
+    binde = , r, exec, ydotool click 3                # 右键点击
+    binde = , z, exec, ydotool click 2                # 中键点击
+
+    # 移动窗口
     binde=, h, resizeactive, -10 0
     binde=, l, resizeactive, 10 0
     binde=, k, resizeactive, 0 -10
     binde=, j, resizeactive, 0 10
+
+    # 退出移动模式
     bind=, escape, submap, reset
 submap=reset
