--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -20,3 +20,4 @@ source = ~/.config/hypr/conf/gestures.conf
 source = ~/.config/hypr/conf/misc.conf
 source = ~/.config/hypr/conf/binds.conf
 source = ~/.config/hypr/conf/windowrules.conf
+source = ~/.config/hypr/conf/device.conf
