--- a/dot_config/hypr/conf/binds.conf
+++ b/dot_config/hypr/conf/binds.conf
@@ -16,7 +16,7 @@ bind = $mainMod, Return, exec, foot
 bind = $mainMod, Q, killactive,
 
 # Exit Hyprland
-bind = $mainMod Shift, Q, exit,
+bind = $mainMod Shift, Delete, exit,
 
 # Menu
 bind = $mainMod Shift, Return, exec, wmenu-run -f "SourceCodePro bold 18" -i -N 242424 -n eeeeee -S 8533ff -s 000000 | xargs exec -
