fix: daily updates

--- a/dot_config/hypr/conf/binds.conf
+++ b/dot_config/hypr/conf/binds.conf
@@ -10,7 +10,7 @@
 $mainMod = SUPER
 
 # Terminal
-bind = $mainMod, Return, exec, foot
+bind = $mainMod, Return, exec, footclient
 
 # Kill View
 bind = $mainMod, Q, killactive,
@@ -192,5 +192,5 @@ submap = mouse_move
     binde=, j, resizeactive, 0 10
 
     # 退出移动模式
-    bind=, escape, submap, reset
+    bind= , escape, submap, reset
 submap=reset
